[package]
name = "clockwork_goose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.0", features = ["rt", "rt-multi-thread", "macros"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend", "framework", "standard_framework"], version = "0.11" }